# gxx

./: .gitignore  README.md  STEPS.md  USER_FLOW.md  prd.md  pyproject.toml
datastore/: __init__.py  pii.py  schema.sql  store.py  texthash.py  vecindex.py
install/: install.ps1  install.sh  register_hermes.py
mcp_server/: __init__.py  relay_client.py  server.py
relay/: Dockerfile  __init__.py  app.py  auth.py  mailer.py  pii.py  ratelimit.py  requirements.txt
skill/: SKILL.md
tests/: test_daemon.py  test_diff.py  test_gate.py  test_integration.py  test_mcp_server.py  test_pii.py  test_register_hermes.py  test_relay.py  test_relay_client.py  test_store.py  test_texthash.py  test_triggers.py  test_understand.py  test_voice.py  test_winctx.py
watcher/: __init__.py  capture.py  config.py  daemon.py  diff.py  gate.py  triggers.py  understand.py  voice.py  winctx.py
website/: index.html
