[project]
name = "contour"
version = "0.1.0"
description = "Local-first proactive multimodal assistant that rides on top of Hermes Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    # datastore
    "turbovec>=0.8.0",
    # watcher — capture + windows context
    "mss>=9.0",
    "sounddevice>=0.4.6",
    "uiautomation>=2.0.18 ; sys_platform == 'win32'",
    "pywin32>=306 ; sys_platform == 'win32'",
    "Pillow>=10.0",
    # local models
    "ollama>=0.3.0",
    # mcp server + relay client
    "mcp[cli]>=1.2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
# system-audio loopback on Windows (stretch)
loopback = ["PyAudioWPatch>=0.2.12 ; sys_platform == 'win32'"]
# relay server (deployed separately; not needed on the client)
relay = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
dev = ["pytest>=8.0"]

[project.scripts]
contour-watch = "watcher.daemon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["watcher", "datastore", "mcp_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
